--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
         "xlsx": "^0.17.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.3",
-        "@popperjs/core": "^2.9.2",
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "@popperjs/core": "^2.9.3",
         "@sentry/browser": "^5.4.3",
-        "bootstrap": "^5.0.2",
+        "bootstrap": "^5.1.0",
         "bootstrap-select": "^1.13.18",
         "bootstrap4": "npm:bootstrap@4.6.0",
-        "easy-autocomplete": "1.3.5",
-        "html2canvas": "^1.1.4",
-        "jquery": "3.5.0",
-        "localforage": "^1.7.3"
+        "easy-autocomplete": "^1.3.5",
+        "html2canvas": "^1.2.1",
+        "jquery": "^3.6.0",
+        "localforage": "^1.9.0"
     }
 }
