--- a/package.json
+++ b/package.json
@@ -10,25 +10,21 @@
     "scripts": {
         "start": "yarn convert && yarn start:noconvert",
         "start:noconvert": "parcel src/index.html",
-        "build:sw": "workbox generateSW ./src/workbox-config.js",
         "build": "yarn convert && parcel build src/index.html && yarn build:sw",
-        "convert": "node util/convert_to_json.js && node util/json_to_data_dir.js"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "pretty-quick --staged"
-        }
+        "build:sw": "workbox generateSW ./src/workbox-config.js",
+        "convert": "node util/convert_to_json.js && node util/json_to_data_dir.js",
+        "prepare": "husky install"
     },
     "engines": {
         "node": ">=12 <16"
     },
     "devDependencies": {
-        "husky": "^2.4.1",
-        "parcel-bundler": "^1.12.3",
-        "prettier": "^1.18.2",
-        "pretty-quick": "^1.11.1",
-        "sass": "^1.21.0",
-        "workbox-cli": "^5.1.3",
+        "husky": "^7.0.1",
+        "parcel-bundler": "^1.12.5",
+        "prettier": "^2.3.2",
+        "pretty-quick": "^3.1.1",
+        "sass": "^1.37.5",
+        "workbox-cli": "^6.2.2",
         "xlsx": "^0.17.0"
     },
     "dependencies": {
