--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "FFCSonTheGo",
     "version": "1.0.0",
     "lastUpdate": {
-        "vellore": "Winter Semester 2022 (Freshers)",
+        "vellore": "Fall Semester 2023-2024 (CS)",
         "chennai": "Winter Semester 2022-23"
     },
     "main": "index.js",
