--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -3,6 +3,7 @@ name: Unit Tests
 on:
     pull_request:
         types: [opened, reopened, synchronize]
+        branches: [ master ]
 
 jobs:
     build:
