--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "lastUpdate": {
         "vellore": "Winter Semester 2022 (Freshers)",
-        "chennai": "Winter Semester 2023-24"
+        "chennai": "Fall Semester 2024-25"
     },
     "repository": "https://github.com/vatz88/FFCSonTheGo.git",
     "author": "Vatsal Joshi <vatz88@gmail.com>",
