Added last update for Ap campus also added badge for it into Readme

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "lastUpdate": {
         "vellore": "Winter Semester 2022 (Freshers)",
-        "chennai": "Winter Semester 2023-24"
+        "chennai": "Winter Semester 2023-24",
+        "ap": "Fall Semester 2023-24"
     },
     "repository": "https://github.com/vatz88/FFCSonTheGo.git",
     "author": "Vatsal Joshi <vatz88@gmail.com>",
