--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "FFCSonTheGo",
     "version": "1.0.0",
     "lastUpdate": {
-        "vellore": "Winter Semester 2022 (Freshers)",
+        "vellore": "Winter Semester 2024-25 (Freshers)",
         "chennai": "Fall Semester 2024-25",
         "ap": "Fall Semester 2023-24"
     },
