--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "lastUpdate": {
         "vellore": "Winter Semester 2022 (Freshers)",
-        "chennai": "Fall Semester 2025-26",
+        "chennai": "Winter Semester 2025-26",
         "ap": "Fall Semester 2023-24"
     },
     "repository": "https://github.com/vatz88/FFCSonTheGo.git",
